--- a/jenkins_helm_exam/templates/movie-service-deployment.yaml
+++ b/jenkins_helm_exam/templates/movie-service-deployment.yaml
@@ -31,7 +31,7 @@ spec:
       - name: movie-service
         build: ./movie-service
         image:
-          repository: mehdilucasammar/movie-service-exam
+          repository: mehdilucasammar/movie-service-exam:{{ .Values.image.tag | default .Chart.AppVersion }}"
           pullPolicy: IfNotPresent
           tag: ""
         command:
