--- a/jenkins_helm_exam/templates/cast-service-deployment.yaml
+++ b/jenkins_helm_exam/templates/cast-service-deployment.yaml
@@ -30,9 +30,8 @@ spec:
       containers:
       - name: cast-service
         build: ./cast-service
-        image:
-          repository: mehdilucasammar/cast-service-exam:{{ .Values.tag | default .Chart.AppVersion }}"                                                  
-          pullPolicy: IfNotPresent
+        image: mehdilucasammar/cast-service-exam:{{ .Values.tag | default .Chart.AppVersion }}
+        imagePullPolicy: IfNotPresent
         command:
           - "uvicorn"
           - "app.main:app"
